# genetic-tunning-rule-extraction

./: README.md  pyproject.toml  setup.cfg
src/rule-extraction/: fuzzy_rules.py  utils.py
src/rule_extraction/: fuzzy_rules.py  utils.py
test/: .gitignore  2020877-serie.txt  main.py  requirements.txt
