[build-system]
requires = [
    "numpy==1.21.3",
    "scikit-fuzzy==0.4.2",
    "scikit-learn==1.0.1",
    "scipy==1.7.1",
    "threadpoolctl==3.0.0",
    "joblib==1.1.0",
    "networkx==2.6.3",
    cycler==0.11.0,
    "kiwisolver==1.3.2",
    "matplotlib==3.4.3",
    "Pillow==8.4.0",
    "pyparsing==3.0.3",
    "python-dateutil==2.8.2",
    "six==1.16.0"
]
build-backend = "setuptools.build_meta"