[metadata]
name = genetic-tunning-rule-extraction
version = 0.0.1
author = Fernando Lima
author_email = folivelima@gmail.com
description = Genetic Tunning for Fuzzy Rule Extraction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fol21/genetic-tunning-rule-extraction
project_urls =
    Bug Tracker = https://github.com/fol21/genetic-tunning-rule-extraction/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src